Add maven options for builds inside Docker container